--- a/src/SerialLoops/Info.plist
+++ b/src/SerialLoops/Info.plist
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
-    <key>CFBundleName</key>
-    <string>SerialLoops</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.example.SerialLoops</string>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
-    <key>LSMinimumSystemVersion</key>
-    <string>10.14</string>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>en</string>
-    <key>NSHumanReadableCopyright</key>
-    <string></string>
-    <key>CFBundleIconFile</key>
-    <string>MacIcon.icns</string>
-  </dict>
+<dict>
+	<key>CFBundleName</key>
+	<string>SerialLoops</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.14</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en</string>
+	<key>NSHumanReadableCopyright</key>
+	<string></string>
+	<key>CFBundleIconFile</key>
+	<string>MacIcon.icns</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.1</string>
+	<key>CFBundleIdentifier</key>
+	<string>org.haroohie.SerialLoops</string>
+</dict>
 </plist>
