--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -14,6 +14,13 @@
 
   <ItemGroup>
     <PackageReference Include="HaruhiChokuretsuLib" Version="0.10.0" />
+    <PackageReference Include="System.Text.Json" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ProjectCreationDialog.eto.cs">
+      <DependentUpon>ProjectCreationDialog.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
