Don't publish web projects

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -25,6 +25,7 @@ jobs:
     inputs:
       command: 'publish'
       arguments: '-o $(Build.ArtifactStagingDirectory)'
+      publishWebProjects: false
 
     displayName: Build solution
 
