--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -14,7 +14,7 @@ jobs:
         imageName: 'macOS-latest'
       Windows:
         imageName: 'windows-latest'
-  displayName: Build & Test
+  displayName: Build & Publish
   pool:
     vmImage: $(imageName)
   steps:
