--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -24,7 +24,7 @@ jobs:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'publish'
-      arguments: '-o $(Build.ArtifactStagingDirectory)'
+      arguments: '-c Release -o $(Build.ArtifactStagingDirectory)'
       publishWebProjects: false
 
     displayName: Build solution
