--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -24,6 +24,7 @@ jobs:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'publish'
+      projects: $(Build.SourcesDirectory)/src/SerialLoops/SerialLoops.csproj
       arguments: '-c Release -o $(Build.ArtifactStagingDirectory)'
       publishWebProjects: false
 
