Make the dialogs a bit more clear

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,4 +31,5 @@ jobs:
       comand: 'test'
       projects: $(Build.SourcesDirectory)/test/SerialLoops.Tests/SerialLoops.Tests.csproj
       publishTestResults: true
+    displayName: Run tests
 
