--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HaruhiChokuretsuLib" Version="0.13.2" />
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.13.4" />
     <PackageReference Include="NitroPacker.Core" Version="2.0.1" />
+    <PackageReference Include="QuikGraph" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
