--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <Content Include="WindowsIcon.ico" />
+    <Content Include="MacIcon.icns" />
   </ItemGroup>
 
   <ItemGroup>
