Add Gtk and Wpf implementations of SoundPlayer

--- a/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
+++ b/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Gtk" Version="2.7.2-ci-20230201.4059880747" />
+    <PackageReference Include="OpenTK" Version="4.7.5" />
   </ItemGroup>
 	
 </Project>
