--- a/src/SerialLoops.Mac/SerialLoops.Mac.csproj
+++ b/src/SerialLoops.Mac/SerialLoops.Mac.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RuntimeIdentifiers>osx-x64;osx-arm64</RuntimeIdentifiers>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
 	
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Mac64" Version="2.7.2-ci-20230201.4059880747" />
+    <PackageReference Include="OpenTK" Version="4.7.5" />
   </ItemGroup>
 	
 </Project>
