--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Eto.Forms/2.7.2-ci-20230201.4059880747">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <!--
     Set the BuildPlatform property to the Eto platform you wish to build for.
@@ -9,8 +9,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Version>0.1.0</Version>
-    <ApplicationIcon>WindowsIcon.ico</ApplicationIcon>
-
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,16 +42,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="WindowsIcon.ico" />
-    <Content Include="MacIcon.icns" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="LibVLCSharp" Version="3.6.7" />
-    <PackageReference Include="LibVLCSharp.Eto" Version="3.6.7" />
+    <PackageReference Include="Eto.Forms" Version="2.7.2-ci-20230201.4059880747" />
     <PackageReference Include="System.Text.Json" Version="7.0.1" />
-    <PackageReference Include="VideoLAN.LibVLC.Mac" Version="3.1.3.1" />
-    <PackageReference Include="VideoLAN.LibVLC.Windows" Version="3.0.18" />
   </ItemGroup>
 
   <ItemGroup>
