--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Archive files used for testing
+bgm/
+vce/
+dat.bin
+evt.bin
+grp.bin
+
 # User-specific files
 *.rsuser
 *.suo
