More work on making tests and refactoring for testability

--- a/test/SerialLoops.Tests/SerialLoops.Tests.csproj
+++ b/test/SerialLoops.Tests/SerialLoops.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SerialLoops.Lib\SerialLoops.Lib.csproj" />
+    <ProjectReference Include="..\..\src\SerialLoops\SerialLoops.csproj" />
   </ItemGroup>
 
   <ItemGroup>
