Restructure user directory, refactor for testability, add a ton of tests (#36)

--- a/test/SerialLoops.Tests/SerialLoops.Tests.csproj
+++ b/test/SerialLoops.Tests/SerialLoops.Tests.csproj
@@ -17,10 +17,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SerialLoops.Lib\SerialLoops.Lib.csproj" />
+    <ProjectReference Include="..\..\src\SerialLoops\SerialLoops.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="inputs\**">
+    <None Update="item_names\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
