New Add/Remove buttons, icons for commands, sections

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\Add.png" />
+    <None Remove="Icons\Add_Section.png" />
     <None Remove="Icons\Background.png" />
     <None Remove="Icons\BGM.png" />
     <None Remove="Icons\Camera.png" />
@@ -23,6 +25,7 @@
     <None Remove="Icons\Map.png" />
     <None Remove="Icons\Pathing.png" />
     <None Remove="Icons\Puzzle.png" />
+    <None Remove="Icons\Remove.png" />
     <None Remove="Icons\Scenario.png" />
     <None Remove="Icons\Script.png" />
     <None Remove="Icons\System_Texture.png" />
