--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HaruhiChokuretsuLib" Version="0.20.2" />
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.22.1" />
     <PackageReference Include="NitroPacker.Core" Version="2.0.1" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
   </ItemGroup>
