--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HaruhiChokuretsuLib" Version="0.22.1" />
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.23.6" />
     <PackageReference Include="NitroPacker.Core" Version="2.0.1" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
   </ItemGroup>
@@ -16,6 +16,12 @@
     <None Update="Sources\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="MapIcons\*.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
