Add loop, volume, and title editing to BGM editor (#52)
Co-authored-by: William <will27528@gmail.com>

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -63,10 +63,10 @@
     <Compile Update="ProjectCreationDialog - Copy.eto.cs">
       <DependentUpon>$([System.String]::Copy('%(Filename)').Replace('.eto', ''))%(Extension)</DependentUpon>
     </Compile>
-    <Compile Update="SearchDialog.eto.cs">
+    <Compile Update="Dialogs\SearchDialog.eto.cs">
       <DependentUpon>$([System.String]::Copy('%(Filename)').Replace('.eto', ''))%(Extension)</DependentUpon>
     </Compile>
-    <Compile Update="ProjectCreationDialog.eto.cs">
+    <Compile Update="Dialogs\ProjectCreationDialog.eto.cs">
       <DependentUpon>ProjectCreationDialog.cs</DependentUpon>
     </Compile>
   </ItemGroup>
