--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HaruhiChokuretsuLib" Version="0.23.6" />
+    <PackageReference Include="BunLabs.NAudio.Flac" Version="2.0.1" />
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.24.1" />
+    <PackageReference Include="NAudio.Vorbis" Version="1.5.0" />
     <PackageReference Include="NitroPacker.Core" Version="2.0.1" />
+    <PackageReference Include="NLayer" Version="1.14.0" />
+    <PackageReference Include="NLayer.NAudioSupport" Version="1.3.0" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
   </ItemGroup>
 
