--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NLayer" Version="1.14.0" />
     <PackageReference Include="NLayer.NAudioSupport" Version="1.3.0" />
     <PackageReference Include="QuikGraph" Version="2.5.0" />
+    <PackageReference Include="VCDiff" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
