--- a/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+++ b/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Wpf" Version="2.7.2-ci-20230201.4059880747" />
+    <PackageReference Include="Eto.Platform.Wpf" Version="2.7.4" />
     <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
 
