--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -60,7 +60,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Eto.Containers" Version="1.1.0" />
     <PackageReference Include="Eto.Forms" Version="2.7.4" />
+    <PackageReference Include="Eto.SkiaDraw" Version="0.2.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.2" />
   </ItemGroup>
 
