--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -11,12 +11,15 @@ jobs:
       Linux:
         imageName: 'ubuntu-latest'
         platformName: 'Gtk'
+        artifactName: 'Linux-v0.1-$(Build.BuildNumber)'
       macOS:
         imageName: 'macOS-latest'
         platformName: 'Mac'
+        artifactName: 'macOS-v0.1-$(Build.BuildNumber)'
       Windows:
         imageName: 'windows-latest'
         platformName: 'Wpf'
+        artifactName: 'Windows-v0.1-$(Build.BuildNumber)'
   displayName: Build & Publish
   pool:
     vmImage: $(imageName)
@@ -35,6 +38,17 @@ jobs:
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-      ArtifactName: '$(imageName)'
+      ArtifactName: '$(artifactName)'
       publishLocation: 'Container'
     displayName: Publish build artifacts
+    
+  - task: GitHubRelease@1
+    displayName: 'Create GitHub Pre-Release'
+    inputs:
+      gitHubConnection: 'GitHub Connection (Jonko)'
+      tagSource: userSpecifiedTag
+      tag: '$(Build.BuildNumber)'
+      title: 'Serial Loops'
+      releaseNotesSource: inline
+      releaseNotesInline: 'Latest build based on main!'
+      isPreRelease: true
