--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -41,7 +41,17 @@ jobs:
       ArtifactName: '$(artifactName)'
       publishLocation: 'Container'
     displayName: Publish build artifacts
-    
+  
+- job:
+  displayName: Create Pre-Release
+  steps:
+  - task: DownloadBuildArtifacts@0
+    displayName: Download build artifacts
+    inputs:
+      buildType: 'current'
+      downloadType: 'single'
+      artifactName: 'drop'
+      downloadPath: '$(Build.ArtifactStagingDirectory)'
   - task: GitHubRelease@1
     displayName: 'Create GitHub Pre-Release'
     inputs:
