--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -56,14 +56,14 @@ stages:
         buildType: 'current'
         downloadType: 'single'
         artifactName: 'drop'
-        downloadPath: '$(Build.ArtifactStagingDirectory)'
+        downloadPath: '$(Build.ArtifactStagingDirectory)/*'
     - task: GitHubRelease@1
       displayName: 'Create GitHub Pre-Release'
       inputs:
         gitHubConnection: 'GitHub Connection (Jonko)'
         tagSource: userSpecifiedTag
         tag: '$(Build.BuildNumber)'
-        title: 'Serial Loops'
+        title: 'Serial Loops v0.1-pre$(Build.BuildNumber)'
         releaseNotesSource: inline
         releaseNotesInline: 'Latest build based on main!'
         isPreRelease: true
