Change artifact download to like, work

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -4,6 +4,10 @@ trigger:
 pr:
 - none
 
+variables:
+  - name: Version
+    value: v0.1-pre$(Build.BuildNumber)
+
 stages:
 - stage: Build
   jobs:
@@ -13,15 +17,15 @@ stages:
         Linux:
           imageName: 'ubuntu-latest'
           platformName: 'Gtk'
-          artifactName: 'Linux-v0.1-$(Build.BuildNumber)'
+          artifactName: 'Linux-$(Version)'
         macOS:
           imageName: 'macOS-latest'
           platformName: 'Mac'
-          artifactName: 'macOS-v0.1-$(Build.BuildNumber)'
+          artifactName: 'macOS-$(Version)'
         Windows:
           imageName: 'windows-latest'
           platformName: 'Wpf'
-          artifactName: 'Windows-v0.1-$(Build.BuildNumber)'
+          artifactName: 'Windows-$(Version)'
     displayName: Build & Publish
     pool:
       vmImage: $(imageName)
@@ -51,12 +55,26 @@ stages:
     dependsOn: 
     steps:
     - task: DownloadBuildArtifacts@0
-      displayName: Download build artifacts
+      displayName: Download Windows artifacts
       inputs:
         buildType: 'current'
         downloadType: 'single'
-        artifactName: 'drop'
-        downloadPath: '$(Build.ArtifactStagingDirectory)/*'
+        artifactName: 'Windows-$(Version)'
+        downloadPath: '$(Build.ArtifactStagingDirectory)'
+    - task: DownloadBuildArtifacts@0
+      displayName: Download macOS artifacts
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'macOS-$(Version)'
+        downloadPath: '$(Build.ArtifactStagingDirectory)'
+    - task: DownloadBuildArtifacts@0
+      displayName: Download Linux artifacts
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'Linux-$(Version)'
+        downloadPath: '$(Build.ArtifactStagingDirectory)'
     - task: GitHubRelease@1
       displayName: 'Create GitHub Pre-Release'
       inputs:
