--- a/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+++ b/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <ApplicationIcon>WindowsIcon.ico</ApplicationIcon>
+    <AssemblyName>SerialLoops</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
