--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Version>0.1.0</Version>
+    <AssemblyName>SerialLoops.Eto</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
