Fixup yaml again

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -48,7 +48,7 @@ stages:
         publishLocation: 'Container'
       displayName: Publish build artifacts
 
-    - ${{ if eq(variables['platformName', 'Mac']) }}:
+    - ${{ if eq(variables['platformName'], 'Mac') }}:
       - task: PublishBuildArtifacts@1
         inputs:
           PathtoPublish: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Release/net6.0/SerialLoops.dmg'
