--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -37,7 +37,7 @@ stages:
       inputs:
         command: 'publish'
         projects: $(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/SerialLoops.$(platformName).csproj
-        arguments: '-c Release'
+        arguments: '-c Release -o $(Build.ArtifactStagingDirectory)'
         publishWebProjects: false
       displayName: Build & Publish Serial Loops
 
