--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -50,7 +50,7 @@ stages:
 
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Release/net6.0/SerialLoops.dmg'
+        PathtoPublish: '$(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/bin/Release/net6.0/SerialLoops.Mac.dmg'
         ArtifactName: '$(artifactName)-dmg'
         publishLocation: 'Container'
       displayName: Publish macOS dmg
